# OpenAIReview

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/review_results/: 260218458v1_skill.json
src/reviewer/: cli.py  client.py  method_incremental.py  method_local.py  parsers.py  utils.py
src/reviewer/viz/: index.html
tests/: test_parsers.py
